--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
-[submodule "tinycolor"]
-	path = tinycolor
-	url = https://github.com/bgrins/TinyColor
-[submodule "stackblur"]
-	path = stackblur
-	url = https://github.com/flozz/StackBlur
+[submodule "zero-memo"]
+	path = zero-memo
+	url = ./
+	branch = master
